--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,10 +10,14 @@
   "author": "Lynx",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cloudinary": "^1.25.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.7",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7"
   }
 }
