--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.3",
     "chart.js": "^3.3.0",
     "jest": "^27.0.4",
+    "jwt-decode": "^3.1.2",
     "parcel": "^2.0.0-beta.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
@@ -21,7 +22,9 @@
     "react-dom": "^17.0.2",
     "react-modal": "^3.13.1",
     "react-router-dom": "^5.2.0",
-    "react-test-renderer": "^17.0.2"
+    "react-select": "^4.3.1",
+    "react-test-renderer": "^17.0.2",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@parcel/transformer-image": "^2.0.0-nightly.2335"
